# Generated by Django 5.1.5 on 2026-08-20 14:46

import ckeditor.fields
import django.contrib.auth.validators
import django.contrib.postgres.indexes
import django.contrib.postgres.search
import django.core.validators
import django.db.models.deletion
import django.utils.timezone
import main.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='DocumentTemplate',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('content', ckeditor.fields.RichTextField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('role', models.CharField(choices=[('LAWYER', 'Lawyer'), ('SENIOR_PARALEGAL', 'Senior Paralegal'), ('PARALEGAL', 'Paralegal'), ('CLIENT', 'Client'), ('ADMIN', 'System Admin')], default='CLIENT', max_length=20, verbose_name='User Role')),
                ('phone', models.CharField(blank=True, max_length=20, validators=[django.core.validators.RegexValidator(message="Phone number must be entered in the format: '+999999999'. Up to 15 digits allowed.", regex='^\\+?1?\\d{9,15}$')], verbose_name='Phone Number')),
                ('is_verified', models.BooleanField(default=False, verbose_name='Email Verified')),
                ('last_updated', models.DateTimeField(auto_now=True, verbose_name='Last Updated')),
                ('bar_number', models.CharField(blank=True, help_text='Required for lawyers', max_length=50, null=True, verbose_name='Bar Number')),
                ('specialization', models.CharField(blank=True, max_length=100, verbose_name='Legal Specialization')),
                ('last_login_ip', models.GenericIPAddressField(blank=True, null=True, verbose_name='Last Login IP')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'User',
                'verbose_name_plural': 'Users',
                'ordering': ['-date_joined'],
                'permissions': [('can_view_confidential', 'Can view confidential documents'), ('can_approve_documents', 'Can approve legal documents'), ('can_manage_users', 'Can manage other users')],
            },
        ),
        migrations.CreateModel(
            name='Tag',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='Name')),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Created At')),
                ('is_system', models.BooleanField(default=False, verbose_name='System Tag')),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL, verbose_name='Created By')),
            ],
            options={
                'verbose_name': 'Tag',
                'verbose_name_plural': 'Tags',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Document',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text='Document title (3-255 characters)', max_length=255, validators=[main.models.validate_title_length], verbose_name='Title')),
                ('document_type', models.CharField(choices=[('CONSTITUTION', 'Constitution'), ('BILL', 'Bill'), ('ACT', 'Act of Parliament'), ('LEGAL_NOTICE', 'Legal Notice'), ('PRACTICE_NOTE', 'Practice Note'), ('TREATY', 'Treaty'), ('CASE_LAW', 'Case Law / Judgment'), ('CONTRACT', 'Contract / Agreement'), ('COURT_FILING', 'Court Filing'), ('CORRESPONDENCE', 'Correspondence'), ('RESEARCH', 'Legal Research'), ('AUDIO', 'Audio Recording'), ('VIDEO', 'Video Recording'), ('OTHER', 'Other')], default='OTHER', max_length=20, verbose_name='Document Type')),
                ('file', models.FileField(help_text='Allowed file types: PDF, DOCX, DOC, PPT, XLS, MP3, WAV, MP4, MOV, TXT, MD', upload_to=main.models.document_upload_path, validators=[django.core.validators.FileExtensionValidator(allowed_extensions=['pdf', 'docx', 'doc', 'ppt', 'pptx', 'xls', 'xlsx', 'mp3', 'wav', 'mp4', 'mov', 'txt', 'md'], message='File type not allowed. Allowed types: %(allowed_extensions)s')], verbose_name='File')),
                ('pdf_file', models.FileField(blank=True, help_text='Auto-generated PDF version of the document', null=True, upload_to='documents/pdf/', validators=[django.core.validators.FileExtensionValidator(allowed_extensions=['pdf'])], verbose_name='PDF Version')),
                ('content', models.TextField(blank=True, validators=[main.models.validate_secure_content], verbose_name='Extracted Content')),
                ('html_content', models.TextField(blank=True, help_text='Rich text content for display and editing', validators=[main.models.validate_secure_content], verbose_name='HTML Content')),
                ('audio_transcript', models.TextField(blank=True, help_text='Transcript of audio/video content', verbose_name='Audio Transcript')),
                ('description', models.TextField(blank=True, help_text='Brief description of the document (max 2000 characters)', validators=[main.models.validate_description_length], verbose_name='Description')),
                ('confidential', models.BooleanField(default=False, verbose_name='Confidential')),
                ('status', models.CharField(choices=[('DRAFT', 'Draft'), ('REVIEW', 'Under Review'), ('APPROVED', 'Approved'), ('ARCHIVED', 'Archived')], default='DRAFT', max_length=20, verbose_name='Status')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True, verbose_name='Uploaded At')),
                ('modified_at', models.DateTimeField(auto_now=True, verbose_name='Last Modified')),
                ('editable', models.BooleanField(default=False, help_text='Can this document be edited directly in the system?', verbose_name='Editable')),
                ('search_vector', django.contrib.postgres.search.SearchVectorField(editable=False, null=True)),
                ('is_archived', models.BooleanField(default=False, help_text='Whether the document has been archived/deleted', verbose_name='Archived')),
                ('archived_at', models.DateTimeField(blank=True, null=True, verbose_name='Archived At')),
                ('archived_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='archived_documents', to=settings.AUTH_USER_MODEL, verbose_name='Archived By')),
                ('reviewed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_documents', to=settings.AUTH_USER_MODEL, verbose_name='Reviewed By')),
                ('uploaded_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='uploaded_documents', to=settings.AUTH_USER_MODEL, verbose_name='Uploaded By')),
                ('tags', models.ManyToManyField(blank=True, to='main.tag', verbose_name='Tags')),
            ],
            options={
                'verbose_name': 'Document',
                'verbose_name_plural': 'Documents',
                'ordering': ['-uploaded_at'],
                'permissions': [('can_analyze_document', 'Can perform NLP analysis'), ('can_share_document', 'Can share documents with others'), ('can_mark_confidential', 'Can mark documents as confidential'), ('can_approve_document', 'Can approve documents'), ('can_delete_document', 'Can delete documents'), ('can_view_archived', 'Can view archived documents'), ('can_permanently_delete', 'Can permanently delete documents')],
            },
        ),
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('document_id', models.PositiveIntegerField(null=True)),
                ('document_title', models.CharField(blank=True, max_length=255)),
                ('document_type', models.CharField(blank=True, max_length=20)),
                ('action', models.CharField(choices=[('CREATE', 'Created'), ('UPDATE', 'Updated'), ('VIEW', 'Viewed'), ('DOWNLOAD', 'Downloaded'), ('APPROVE', 'Approved'), ('REJECT', 'Rejected'), ('SUBMIT_REVIEW', 'Submitted for Review'), ('VERSION_CREATE', 'New Version Created'), ('CONTENT_EDIT', 'Content Edited'), ('STATUS_CHANGE', 'Status Changed'), ('ARCHIVE', 'Archived'), ('RESTORE', 'Restored'), ('DELETE', 'Permanently Deleted'), ('SHARE', 'Shared'), ('PERMISSION_CHANGE', 'Permissions Changed')], max_length=20)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('additional_info', models.JSONField(default=dict)),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True)),
                ('user_agent', models.TextField(blank=True)),
                ('session_key', models.CharField(blank=True, max_length=40)),
                ('user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL, verbose_name='User')),
            ],
            options={
                'verbose_name': 'Audit Log Entry',
                'verbose_name_plural': 'Audit Log Entries',
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['document_id'], name='main_auditl_documen_5a6ae4_idx'), models.Index(fields=['user', 'timestamp'], name='main_auditl_user_id_1cd3b6_idx'), models.Index(fields=['action', 'timestamp'], name='main_auditl_action_61f1e6_idx')],
            },
        ),
        migrations.CreateModel(
            name='DocumentVersion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file', models.FileField(upload_to=main.models.document_upload_path, verbose_name='File')),
                ('version_number', models.PositiveIntegerField(verbose_name='Version Number')),
                ('changes', models.TextField(blank=True, verbose_name='Change Description')),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Created At')),
                ('approved', models.BooleanField(default=False, verbose_name='Approved')),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL, verbose_name='Created By')),
                ('document', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='versions', to='main.document', verbose_name='Document')),
            ],
            options={
                'verbose_name': 'Document Version',
                'verbose_name_plural': 'Document Versions',
                'ordering': ['-version_number'],
                'unique_together': {('document', 'version_number')},
            },
        ),
        migrations.AddIndex(
            model_name='document',
            index=django.contrib.postgres.indexes.GinIndex(fields=['search_vector'], name='main_docume_search__e5ad70_gin'),
        ),
        migrations.AddIndex(
            model_name='document',
            index=models.Index(fields=['title'], name='main_docume_title_dde538_idx'),
        ),
        migrations.AddIndex(
            model_name='document',
            index=models.Index(fields=['document_type'], name='main_docume_documen_fc9936_idx'),
        ),
        migrations.AddIndex(
            model_name='document',
            index=models.Index(fields=['status'], name='main_docume_status_5faa6b_idx'),
        ),
        migrations.AddIndex(
            model_name='document',
            index=models.Index(fields=['uploaded_at'], name='main_docume_uploade_220374_idx'),
        ),
    ]
